test: "LogicTest"